# vector_db_engine

./: .gitignore  Cargo.toml  README.md  YAGPDB - Control Panel _ Beyond Nen.html  compile_dict.py  ingest_local.py  ingest_nitro.py  ingest_scam.py  task_5_1.c  task_5_2.c  task_5_3.c
.github/workflows/: build-and-release.yml
YAGPDB - Control Panel _ Beyond Nen_files/: a_98ba1f95f63499a88c39cd2351a87960  css  js
dashboard/channels_app/: admin.py  context_processors.py  forms.py  models.py  telegram.py  tests.py  urls.py  views.py
dashboard/channels_app/migrations/: 0001_initial.py  0002_violationevent_offenderstats.py
dashboard/config/: settings.py  urls.py
dashboard/static/dashboard/: styles.css
dashboard/templates/dashboard/: analytics.html  base.html  channel_detail.html  channel_form.html  connect.html  home.html  login.html  offenders.html
scripts/python/: build_rust_dictionary.py  mine_moderation_data.py  seed_qdrant_from_hf.py  seed_qdrant_from_local_datasets.py  seed_qdrant_from_mined_toxicity.py  seed_qdrant_nitro_examples.py
src/: dfa_fast_path.rs  disruptor.rs  l2_semantic.rs  lib.rs  simd_preprocessor.rs
telegram_bot/: Cargo.toml
telegram_bot/src/: main.rs
vector_db_engine/: Cargo.toml
vector_db_engine/src/: dfa_fast_path.rs  disruptor.rs  js_parity.rs  l2_semantic.rs  lib.rs  main.rs  simd_preprocessor.rs  test_api.rs
vector_db_engine/src/embedded_js/: abr.json  decision-model.json  en.json  merged-external.json  moderation-db.json
