[package]
name = "telegram_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
unicode-normalization = "0.1.22"
teloxide = { version = "0.12", features = ["macros"] }
tokio = { version = "1.34", features = ["rt-multi-thread", "macros", "time"] }
dotenvy = "0.15"

# Locally bind to our extreme-performance moderation engine
moderation_engine = { path = "../vector_db_engine" }
